--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     
   </head>
   <body>
-  <p>hi</p>
-  <!-- <img alt="this is an ad" id="cooldude" src="img/ad.png" /> -->
+    <p>hey</p>
+
+    <img alt="stuff" id="cooldude" src="img/ad.png" />
+
   <script src="js/coolstuff.js"></script>
   </body>
 </html>
