So many moar stuff.

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 
     <img alt="stuff" id="cooldude" src="img/ad.png" />
     <script src="js/coolstuff.js"></script>
+    <script src="js/listenerz.js"></script>
   </body>
 </html>
