--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <p>hey</p>
 
-    <img alt="stuff" id="cooldude" src="img/ad.png" />
+    <div>
+      <img alt="stuff" id="cooldude" src="img/ad.png" />
+    </div>
     <script src="js/coolstuff.js"></script>
     <script src="js/listenerz.js"></script>
   </body>
