--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <p>hey</p>
 
     <div>
-      <img alt="stuff" id="cooldude" src="img/ad.png" />
+      <img id="cooldude" src="img/ad.png" />
     </div>
+
     <script src="js/coolstuff.js"></script>
     <script src="js/listenerz.js"></script>
   </body>
