Rename stuff, whatever.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
   <body>
     <p>hey</p>
 
-    <div>
-      <img id="cooldude" src="img/ad.png" />
-    </div>
-
-    <script src="js/coolstuff.js"></script>
-    <script src="js/listenerz.js"></script>
+    <div><img id="duh-ad" src="img/ad.png" /></div>
+    <script src="js/adblockevents.js"></script>
+    <script src="js/adblocklistener.js"></script>
   </body>
 </html>
