--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <p>hey</p>
 
-    <div><img id="adblock-detector" src="img/ad.png" /></div>
+    <div id="adblock-detector" ><img src="img/ad.png" /></div>
     <script src="js/adblockevents.js"></script>
     <script src="js/adblocklistener.js"></script>
   </body>
